# bedlam_clothing

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
bedlam_clothing/: __init__.py  config.py
bedlam_clothing/blender/: io.py  utils.py
bedlam_clothing/file_io/: __init__.py  obj.py
bedlam_clothing/motion/: __init__.py  framerate.py  hands.py  motion_sequence.py  stats.py  tpose.py
bedlam_clothing/motion/io/: __init__.py  abc.py  obj.py  pc2.py
bedlam_clothing/utils/: random.py  rotation.py
bedlam_clothing/utils/rotation/: __init__.py  rotate_points.py
config/base_cfg/: body_models.yaml  motion_processing.yaml  pose_normalization_matrices.yaml
scripts/: abc_to_npz.py  export_motions_as_abc.py
support_data/body_models/smplx_locked_head/: download_smplx.sh
support_data/v_templates/: download_toeless_vtemplate.sh
