[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { include = ["bedlam_clothing*", "support_data*"] }

[project]
name = "bedlam_clothing"
version = "0.1.0"
description = ""
authors = [
    { name = "Giorgio Becherini", email = "giorgio.becherini@tuebingen.mpg.de" }
]
readme = "README.md"
requires-python = ">=3.11, <3.12"
license = { file = "LICENSE.md" }
keywords = ["bedlam", "bedlam2", "clothing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

dependencies = [
    "antlr4-python3-runtime==4.9.3",
    "bomoto @ git+https://github.com/PerceivingSystems/bomoto.git@6a0ec31",
    "bpy==4.2.0",
    "c3d==0.5.2",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "cython==3.0.11",
    "docker-pycreds==0.4.0",
    "einops==0.8.0",
    "filelock==3.16.1",
    "fonttools==4.54.1",
    "freetype-py==2.5.1",
    "fsspec==2024.10.0",
    "fvcore==0.1.5.post20221221",
    "gitdb==4.0.11",
    "gitpython==3.1.43",
    "idna==3.10",
    "imageio==2.36.0",
    "iopath==0.1.10",
    "jinja2==3.1.4",
    "joblib==1.4.2",
    "kiwisolver==1.4.7",
    "loguru==0.7.2",
    "markupsafe==3.0.2",
    "matplotlib==3.9.2",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numpy==1.23.5",
    "nvidia-cublas-cu12==12.4.5.8",
    "nvidia-cuda-cupti-cu12==12.4.127",
    "nvidia-cuda-nvrtc-cu12==12.4.127",
    "nvidia-cuda-runtime-cu12==12.4.127",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-cufft-cu12==11.2.1.3",
    "nvidia-curand-cu12==10.3.5.147",
    "nvidia-cusolver-cu12==11.6.1.9",
    "nvidia-cusparse-cu12==12.3.1.170",
    "nvidia-nccl-cu12==2.21.5",
    "nvidia-nvjitlink-cu12==12.4.127",
    "nvidia-nvtx-cu12==12.4.127",
    "omegaconf==2.3.0",
    "opencv-python==4.10.0.84",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.0.0",
    "platformdirs==4.3.6",
    "portalocker==2.10.1",
    "protobuf==5.28.3",
    "psutil==6.1.0",
    "pyglet==2.0.18",
    "pyopengl==3.1.0",
    "pyparsing==3.2.0",
    "pyrender==0.1.45",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "scikit-learn==1.5.2",
    "scipy==1.11.4",
    "sentry-sdk==2.18.0",
    "setproctitle==1.3.3",
    "six==1.16.0",
    "smmap==5.0.1",
    "smplx @ git+https://github.com/vchoutas/smplx@566532a",
    "sympy==1.13.1",
    "tabulate==0.9.0",
    "termcolor==2.5.0",
    "threadpoolctl==3.5.0",
    "torch==2.5.1",
    "tqdm==4.66.6",
    "trimesh==4.0.10",
    "triton==3.1.0",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "urllib3==2.2.3",
    "wandb==0.18.6",
    "yacs==0.1.8",
    "zstandard==0.23.0",
]

[project.urls]
"Homepage" = "https://bedlam2.is.tuebingen.mpg.de/"
# "Documentation" = ""
"Source Code" = "https://github.com/PerceivingSystems/bedlam_clothing"
"Issue Tracker" = "https://github.com/PerceivingSystems/bedlam_clothing/issues"
